# nut-website

./: .gitignore  .gitmodules  .travis.yml  Jenkinsfile-infra  Makefile.am  README.asciidoc  autogen.sh  bootstrap.conf  ci_build.sh  configure.ac  index-jumboinfo-header-bootstrap.html  index-jumboinfo-header-web-layout.html  index-jumboinfo.html  index-jumboinfo.html.in  index.txt  navinfo.html  news.txt  nut-website.dict.addon  nut.dict  projects.txt  stable-hcl.txt  ups-protocols.txt  web-layout.conf  website.txt  website.txt.in
.github/workflows/: build.yml
css/: nut.css  web-layout.css
historic/: index.txt
protocols/: Makefile.am  apcsmart.txt  belkin-universal.txt  belkin.txt  fortress.txt  huawei-ups2000-modbus.txt  megatec.txt  minicol.txt  sec-protocol.txt  sec-standard.txt  voltronic-qs.txt  voltronic.txt
protocols/static/megatec-dialects/: 5b0544b3b34cf.doc
protocols/static/snmp/: eaton-epdu.mib
scripts/: asciidoc.js  nut.js  nut_jquery.js
tools/: .gitignore  nut-ddl.py  nut-ddl.py.in  nut-hclinfo.py  nut-hclinfo.py.in
